update arquivo html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro Repositório</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <p>Reza a lenda que que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
+    <main>
+        <header>
+            <h1>Olá, Mundo!</h1>
+        </header>
+        <article>
+            <p>Reza a lenda que que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
+        </article>
+    </main>
+    
 </body>
 </html>
