--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
+    <img src="imagem/mac1.png" width="200px" height="200px" alt="Macintosh!" title="computador antigo." vspace="50px" hspace="110px" border="4px" align="right"/>
+    <img src="imagem/hello world.png" width="200px" height="200px" alt="Macintosh!" title="computador antigo." vspace="50px" hspace="110px" border="4px" align="left"/>
     <main>
         <header>
             <h1>Olá, Mundo!</h1>
