correção no texto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Olá, Mundo!</h1>
         </header>
         <article>
-            <p>Reza a lenda que que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
+            <p>Reza a lenda que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
         </article>
     </main>
     
