--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <img src="imagem/mac1.png" width="200px" height="200px" alt="Macintosh!" title="computador antigo." vspace="50px" hspace="110px" border="4px" align="right"/>
-    <img src="imagem/hello world.png" width="200px" height="200px" alt="Macintosh!" title="computador antigo." vspace="50px" hspace="110px" border="4px" align="left"/>
+    <img src="imagem/mac1.png" width="200px" height="200px" alt="Macintosh!" title="Computador antigo." vspace="50px" hspace="110px" border="4px" align="right"/>
+    <img src="imagem/hello world.png" width="200px" height="200px" alt="Macintosh!" title="Olá, Mundo!." vspace="50px" hspace="110px" border="4px" align="left"/>
     <main>
         <header>
             <h1>Olá, Mundo!</h1>
         </header>
         <article>
-            <p>Reza a lenda que que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
+            <p>Reza a lenda que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
         </article>
     </main>
     
