--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Repositório</title>
+    <title>Olá, Mundo!</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -16,8 +16,9 @@
         </header>
         <article>
             <p>Reza a lenda que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
+            <p2>História da Informática: 
+                <a href="pagina/index.html">clique aqui</a></p2>
         </article>
     </main>
-    
 </body>
 </html>
