--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <p>Reza a lenda que o programador que não fizer no seu primeiro código com as instruções que escreva na tela o simples Hello World ou Olá Mundo.. Não conseguirá e entender ou mesmo não será um bom profissional na área da programação…. echo “Hello, World!”</p>
             <p2>História da Informática: 
                 <a href="historia/index.html">clique aqui :</a></p2>
+                <p3>
+                    Escrevendo Olá Mundo em pyhon:
+                    <a href="python/index.html">clique aqui:</a>
+                </p3>
         </article>
     </main>
 </body>
