--- a/python/index.html
+++ b/python/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <head>
             <article>
-                <h1>Como escrever Olá Mundo em python</h1>
+                <h1>Como escrever Olá Mundo em python?</h1>
+                <p>Para isso usasse apenas um comando: o print seguido de parenteses , e a mensagem dentro de aspas simples.
+                    Veja abaixo:
+                </p>
+                <img src="imagem/codigo.png" alt="codigo em python!">
             </article>
         </head>
     </main>
