mudança em imagens

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <img src="imagem/mac1.png" width="200px" height="200px" alt="Macintosh!" title="Computador antigo." vspace="50px" hspace="110px" border="4px" align="right"/>
-    <img src="imagem/hello world.png" width="200px" height="200px" alt="Macintosh!" title="Olá, Mundo!." vspace="50px" hspace="110px" border="4px" align="left"/>
+    <img src="imagem/macL.png" width="200px" height="200px" alt="Macintosh!" title="Computador antigo." vspace="50px" hspace="110px" align="right"/>
+    <img src="imagem/helloL.png" width="200px" height="200px" alt="Macintosh!" title="Olá, Mundo!." vspace="50px" hspace="110px" align="left"/>
     <main>
         <header>
             <h1>Olá, Mundo!</h1>
